# n-body

./: .gitignore  Cargo.toml  index.html  page_build.sh  readme.md  sim_test.d.ts  sim_test.js  sim_test_bg.wasm.d.ts
.github/workflows/: deploy_page.yml  rust.yml  rust_build.yml  wasm_build.yml
saves/: lol.scn
src/: level_builder.rs  lib.rs  main.rs  mouse_camera_control.rs  physics.rs  saving.rs  world_constructor.rs
src/commands/: command_parser.rs  mod.rs
src/edit_tools/: mod.rs  window.rs
src/graphics/: mod.rs  trails.rs
web/: index.html  wasm_n_body_platformer.d.ts  wasm_n_body_platformer.js  wasm_n_body_platformer_bg.wasm.d.ts
