[package]
name = "n-body-platformer"
version = "0.1.0"
edition = "2024"
default-run = "sim_test"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
# lto = true
# codegen-units = 1

[dependencies]
bevy = "0.17"
bevy_egui = "0.38"
radix_trie = "0.2.1"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js", "std"] }
